Gnome-shell: Fix text contrast in some elements

--- a/gnome-shell/_common.scss
+++ b/gnome-shell/_common.scss
@@ -114,7 +114,7 @@ StScrollBar {
 
 .slider {
   height: 1em;
-  color: darken($selected_fg_color, 25%);
+  color: lighten($fg_color, 15%);
   border-color: black;
   -slider-height: 0.1em;
   -slider-background-color: $gray; //background of the trough
@@ -868,10 +868,9 @@ StScrollBar {
       box-shadow: none;
       @include gradient();
       color: $selected_fg_color;
-      text-shadow: 0px 0px 2px rgba(92, 92, 92, 0.9);
+      text-shadow: none;
       transition-duration: 200ms;
 
-      & > .system-status-icon { icon-shadow: red 0 2px 2px; }
     }
 
     .system-status-icon { icon-size: 1.09em; padding: 0 5px; }
@@ -1057,7 +1056,6 @@ StScrollBar {
       &:hover,&:focus { background-color: lighten($bg_color,5%); }
       &:active,&:selected {
         color: $selected_fg_color;
-        background-color: $selected_bg_color;
         @include gradient();
         border-color: black; //avoid jumparound due to today
         box-shadow: none;
@@ -1084,7 +1082,7 @@ StScrollBar {
         font-weight: bold;
         border: 1px solid transparent;
         background-color: $selected_bg_color;
-        color: $selected_fg_color;
+        color: $selected_fg_color !important;
 
         &:hover,&:focus {
           background-color:lighten($selected_bg_color, 3%);
@@ -1596,7 +1594,7 @@ StScrollBar {
   }
 
   %icon_tile {
-    color: $selected_fg_color;
+    color: $fg_color;
     padding: 6px;
     border: none;
     transition-duration: 100ms;
