--- a/gnome-shell/_drawing.scss
+++ b/gnome-shell/_drawing.scss
@@ -157,8 +157,8 @@
     $_bg: if($c!=$osd_bg_color, transparentize($c, 0.5),
                           $osd_bg_color);
 
-    background-color: lighten($base_color, 8%);
-    color: $selected_fg_color;
+    background-color: lighten($bg_color, 8%);
+    color: lighten($fg_color, 15%);
     text-shadow: 0 1px black;
     icon-shadow: 0 1px black;
     box-shadow: none;
@@ -172,8 +172,8 @@
     $_bg: if($c!=$osd_bg_color, transparentize($c, 0.3),
                             lighten($main_dark, 2%));
 
-    background-color: lighten($base_color, 7%);
-    color: $selected_fg_color;
+    background-color: lighten($bg_color, 7%);
+    color: lighten($fg_color, 15%);
     border: 1px solid $borders_color;
     text-shadow: 0 1px black;
     icon-shadow: 0 1px black;
