--- a/gnome-shell/gnome-shell.css
+++ b/gnome-shell/gnome-shell.css
@@ -19,8 +19,8 @@ stage {
   border-radius: 6px;
   padding: 4px 32px; }
   .button:focus, .app-folder-dialog .edit-folder-button:focus {
-    background-color: #32343d;
-    color: #f7f7f7;
+    background-color: #232329;
+    color: #bdc2ca;
     text-shadow: 0 1px black;
     icon-shadow: 0 1px black;
     box-shadow: none;
@@ -39,8 +39,8 @@ stage {
     text-shadow: none;
     icon-shadow: none; }
   .button:hover, .app-folder-dialog .edit-folder-button:hover {
-    background-color: #30323b;
-    color: #f7f7f7;
+    background-color: #202026;
+    color: #bdc2ca;
     border: 1px solid #161819;
     text-shadow: 0 1px black;
     icon-shadow: 0 1px black; }
@@ -67,22 +67,22 @@ stage {
     text-shadow: none;
     icon-shadow: none; }
   .modal-dialog-linked-button:focus {
-    background-color: #32343d;
-    color: #f7f7f7;
+    background-color: #232329;
+    color: #bdc2ca;
     text-shadow: 0 1px black;
     icon-shadow: 0 1px black;
     box-shadow: none;
     border: 1px solid #161819; }
     .modal-dialog-linked-button:focus:hover {
-      background-color: #32343d;
-      color: #f7f7f7;
+      background-color: #232329;
+      color: #bdc2ca;
       text-shadow: 0 1px black;
       icon-shadow: 0 1px black;
       box-shadow: none;
       border: 1px solid #161819; }
   .modal-dialog-linked-button:hover {
-    background-color: #30323b;
-    color: #f7f7f7;
+    background-color: #202026;
+    color: #bdc2ca;
     border: 1px solid #161819;
     text-shadow: 0 1px black;
     icon-shadow: 0 1px black; }
@@ -103,7 +103,7 @@ StEntry {
   border-width: 2px;
   color: #929ba8;
   selection-background-color: #f7b922;
-  selected-color: #f7f7f7; }
+  selected-color: #000000; }
   StEntry:hover {
     border-color: rgba(247, 185, 34, 0.6); }
   StEntry:focus {
@@ -144,7 +144,7 @@ StScrollBar {
 /* Slider */
 .slider {
   height: 1em;
-  color: #b7b7b7;
+  color: #bdc2ca;
   border-color: black;
   -slider-height: 0.1em;
   -slider-background-color: #202026;
@@ -532,7 +532,7 @@ StScrollBar {
     background-gradient-start: #eee90a !important;
     background-gradient-end: #f7b922 !important;
     background-gradient-direction: horizontal;
-    color: #f7f7f7;
+    color: #000000;
     border-radius: 6px 6px 0px 0px;
     box-shadow: none; }
   .popup-menu-item:insensitive {
@@ -634,7 +634,7 @@ StScrollBar {
 
 .switcher-list .item-box:selected {
   background-color: #f7b922;
-  color: #f7f7f7; }
+  color: #000000; }
 
 .switcher-list .thumbnail-box {
   padding: 2px;
@@ -679,7 +679,7 @@ StScrollBar {
 .ws-switcher-active-right {
   height: 50px;
   background-color: #f7b922;
-  color: #f7f7f7;
+  color: #000000;
   border: none;
   background-size: 32px;
   border-radius: 8px; }
@@ -763,11 +763,9 @@ StScrollBar {
       background-gradient-start: #eee90a !important;
       background-gradient-end: #f7b922 !important;
       background-gradient-direction: horizontal;
-      color: #f7f7f7;
-      text-shadow: 0px 0px 2px rgba(92, 92, 92, 0.9);
+      color: #000000;
+      text-shadow: none;
       transition-duration: 200ms; }
-      #panel .panel-button:active > .system-status-icon, #panel .panel-button:overview > .system-status-icon, #panel .panel-button:focus > .system-status-icon, #panel .panel-button:checked > .system-status-icon {
-        icon-shadow: red 0 2px 2px; }
     #panel .panel-button .system-status-icon {
       icon-size: 1.09em;
       padding: 0 5px; }
@@ -864,7 +862,7 @@ StScrollBar {
 .events-section-title:active,
 .message-list-section-title:active,
 .events-button:active {
-  color: white;
+  color: #0d0d0d;
   background-color: #f7b922; }
 
 .datemenu-today-button .date-label {
@@ -928,8 +926,7 @@ StScrollBar {
   .calendar-day-base:hover, .calendar-day-base:focus {
     background-color: #1c1c21; }
   .calendar-day-base:active, .calendar-day-base:selected {
-    color: #f7f7f7;
-    background-color: #f7b922;
+    color: #000000;
     background-gradient-start: #eee90a !important;
     background-gradient-end: #f7b922 !important;
     background-gradient-direction: horizontal;
@@ -956,16 +953,16 @@ StScrollBar {
   font-weight: bold;
   border: 1px solid transparent;
   background-color: #f7b922;
-  color: #f7f7f7; }
+  color: #000000 !important; }
   .calendar-today:hover, .calendar-today:focus {
     background-color: #f8be31;
-    color: #f7f7f7; }
+    color: #000000; }
   .calendar-today:active, .calendar-today:selected {
     background-color: #f7b922;
-    color: #f7f7f7; }
+    color: #000000; }
     .calendar-today:active:hover, .calendar-today:active:focus, .calendar-today:selected:hover, .calendar-today:selected:focus {
       background-color: #f8be31;
-      color: #f7f7f7; }
+      color: #000000; }
 
 .calendar-day-with-events {
   color: #afb5be;
@@ -1132,7 +1129,7 @@ StScrollBar {
     background: transparent; }
   .system-menu-action:active {
     background-color: #dea008;
-    color: #f7f7f7;
+    color: #000000;
     border: 1px solid #dea008; }
   .system-menu-action > StIcon {
     icon-size: 16px; }
@@ -1209,7 +1206,7 @@ StScrollBar {
 
 .nm-dialog-item:selected {
   background-color: #f7b922;
-  color: #f7f7f7; }
+  color: #000000; }
 
 .nm-dialog-icons {
   spacing: .5em; }
@@ -1408,7 +1405,7 @@ StScrollBar {
 .app-well-app.app-folder .overview-icon,
 .show-apps .overview-icon,
 .grid-search-result .overview-icon {
-  color: #f7f7f7;
+  color: #929ba8;
   padding: 6px;
   border: none;
   transition-duration: 100ms;
@@ -1550,7 +1547,7 @@ StScrollBar {
   -shell-counter-overlap-x: 3px;
   -shell-counter-overlap-y: 3px;
   background-color: #f7b922;
-  color: #f7f7f7;
+  color: #000000;
   border: 2px solid #929ba8;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.5);
   border-radius: 0.9em; }
@@ -1662,15 +1659,15 @@ StScrollBar {
   font-weight: bold;
   border-radius: 5px; }
   .keyboard-key:focus {
-    background-color: #32343d;
-    color: #f7f7f7;
+    background-color: #232329;
+    color: #bdc2ca;
     text-shadow: 0 1px black;
     icon-shadow: 0 1px black;
     box-shadow: none;
     border: 1px solid #161819; }
   .keyboard-key:hover, .keyboard-key:checked {
-    background-color: #30323b;
-    color: #f7f7f7;
+    background-color: #202026;
+    color: #bdc2ca;
     border: 1px solid #161819;
     text-shadow: 0 1px black;
     icon-shadow: 0 1px black; }
@@ -1709,7 +1706,7 @@ StScrollBar {
   border-radius: 4px; }
   .candidate-box:selected, .candidate-box:hover {
     background-color: #f7b922;
-    color: #f7f7f7; }
+    color: #000000; }
 
 .candidate-page-button-box {
   height: 2em; }
@@ -1761,8 +1758,8 @@ StScrollBar {
       icon-shadow: 0 1px black;
       border: 1px solid #161819; }
       .login-dialog .modal-dialog-button:default:hover, .login-dialog .modal-dialog-button:default:focus {
-        background-color: #30323b;
-        color: #f7f7f7;
+        background-color: #202026;
+        color: #bdc2ca;
         border: 1px solid #161819;
         text-shadow: 0 1px black;
         icon-shadow: 0 1px black; }
@@ -1819,7 +1816,7 @@ StScrollBar {
   width: 23em; }
   .login-dialog-user-list:expanded .login-dialog-user-list-item:selected {
     background-color: #f7b922;
-    color: #f7f7f7; }
+    color: #000000; }
   .login-dialog-user-list:expanded .login-dialog-user-list-item:logged-in {
     border-right: 2px solid #f7b922; }
 
@@ -1836,7 +1833,7 @@ StScrollBar {
     margin: 2px 0 0 0;
     background-color: #929ba8; }
   .login-dialog-user-list-item:focus .login-dialog-timed-login-indicator {
-    background-color: #f7f7f7; }
+    background-color: #000000; }
 
 .login-dialog-username,
 .user-widget-label {
